moved string literals to strings.xml; bug fix for incorrect drawable file name format

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Volleyball</string>
+    <string name="newMatchButtonText">New Match</string>
+    <string name="appCreators">Authors/Company Name</string>
+    <string name="pointButtonText">POINT</string>
+    <string name="awayLabelText">AWAY</string>
+    <string name="homeLabelText">HOME</string>
+    <string name="undoButtonText">Undo</string>
 </resources>
